--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 repositories {
     flatDir {
         dirs '/libs'
@@ -32,7 +32,11 @@ android {
                 arguments = [moduleName: project.getName()]
             }
         }
-
+        kapt {
+            arguments {
+                arg("AROUTER_MODULE_NAME", project.getName())
+            }
+        }
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a"
         }
@@ -72,8 +76,6 @@ android {
             versionNameSuffix "-debug"
             resValue "string", "app_name", "木牛流马"
             resValue "string", "weChatAppid", "wx10d4b234bc2e64dc"//微信APPID
-            resValue "string", "UMAppKey", "5e723107167eddb65e0001b6"//友盟推送 appkey
-            resValue "string", "UMpushSercet", "8c2ef94dbc50f6546c4ded2e45579629"//友盟推送sercet
 
             //人脸识别测试版本
             resValue "string", "verify_appID", "TIDAnu4f"//人脸识别
@@ -85,7 +87,7 @@ android {
             resValue "string", "freight_uniquie", "37103085"//企业唯一标识
             resValue "string", "freight_secret", "5928b6bab955463a858ef0777e0e8853c7750ed293c2420f8a7942b79ef11f91"//安全码
             ///////////////////////////////////////////////////
-
+            resValue "string", "rong_app_key", "e0x9wycfe4enq"//融云聊天key
 
             manifestPlaceholders = [
                     RONG_CLOUD_APP_KEY: "e0x9wycfe4enq"//融云聊天key，测试
@@ -98,8 +100,6 @@ android {
             buildConfigField "boolean", "IS_DEBUG", "false"
             resValue "string", "app_name", "木牛流马"
             resValue "string", "weChatAppid", "wx10d4b234bc2e64dc"//微信APPID
-            resValue "string", "UMAppKey", "5e723107167eddb65e0001b6"//友盟推送 appkey
-            resValue "string", "UMpushSercet", "8c2ef94dbc50f6546c4ded2e45579629"//友盟推送sercet
 
             //人脸识别正式版本
             resValue "string", "verify_appID", "IDAGnuKK"//人脸识别正式版本
@@ -109,6 +109,8 @@ android {
             //网络货运
             resValue "string", "freight_uniquie", "37103085"//企业唯一标识
             resValue "string", "freight_secret", "5928b6bab955463a858ef0777e0e8853c7750ed293c2420f8a7942b79ef11f91"//安全码
+
+            resValue "string", "rong_app_key", "x18ywvqfxbxhc"//融云聊天key
             ///////////////////////////////////////////////////
 
             manifestPlaceholders = [
@@ -143,6 +145,6 @@ dependencies {
     api 'cn.yipianfengye.android:zxing-library:2.2'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    kapt "com.alibaba:arouter-compiler:1.5.2"
 
 }
