--- a/ThirdLibrary/build.gradle
+++ b/ThirdLibrary/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.61'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.47'
     api files('libs/locationsdk-1.0.0.aar')
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 }
