--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,7 +143,7 @@ dependencies {
     api 'com.hedgehog.ratingbar:app:1.1.2'
     //二维码扫描
     api 'cn.yipianfengye.android:zxing-library:2.2'
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     kapt "com.alibaba:arouter-compiler:1.5.2"
 
