--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ def releaseTime() {
 }
 
 ext {
-    compileSdkVersion = 31
+    compileSdkVersion = 30
     minSdkVersion = 19
-    targetSdkVersion = 31
-    versionCode = 162
-    versionName = "1.6.2"
+    targetSdkVersion = 30
+    versionCode = 163
+    versionName = "1.6.3"
 //    versionName = releaseTime()+".01"
 
 
@@ -22,7 +22,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url 'http://maven.rongcloud.cn/repository/maven-releases/' }
+        maven { url 'https://maven.rongcloud.cn/repository/maven-releases/' }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://jitpack.io' }
@@ -42,7 +42,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url 'http://maven.rongcloud.cn/repository/maven-releases/' }
+        maven { url 'https://maven.rongcloud.cn/repository/maven-releases/' }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'https://jitpack.io' }
