--- a/BaseLibrary/build.gradle
+++ b/BaseLibrary/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'  //1.0.5及以前版本的老用户升级需谨慎，API改动过大
     api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'  //没有使用特殊Header，可以不加这行
     api 'androidx.multidex:multidex:2.0.1'
+    api 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation "androidx.core:core-ktx:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
